@@ -153,7 +153,7 @@ FLOATVAL q = 1;
 
 =head1 COPYRIGHT
 
-Copyright (C) 2001-2002 Yet Another Society. All rights reserved.
+Copyright (C) 2001-2003 Yet Another Society. All rights reserved.
 
 =head1 LICENSE
 
